--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,11 +6,22 @@
         <div class="title">
             <h1>Upload a photo to Photoshare</h1>
         </div>
+
+        {% if album %}
             <form method="post" enctype="multipart/form-data" action="/upload">
                 <label for="photo">Select photo:</label>
                 <input type="file" name="photo" required='true' /><br />
-                <label for="caption">Please caption:</label>
+                <label for="caption">Please create a caption:</label>
                 <input type="text" name="caption" required='true' /><br />
                 <input type="submit" value="Upload" />
             </form>
+        {% else %}
+            <h2>You need to create an album first!</h2>
+            <li><a href='/albumCreation'>Create an Album</a> </li>
+            
+        {% endif %}
+
     </body>
+
+    <a href='/'>Home</a>
+   
