implemented contribution score going up. album creation works. need to make album and photo deletion

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -13,6 +13,8 @@
                 <input type="file" name="photo" required='true' /><br />
                 <label for="caption">Please create a caption:</label>
                 <input type="text" name="caption" required='true' /><br />
+                <label for="albumName">Enter the album to upload this photo to:</label>
+                <input type="text" name="albumName" required='true' /><br />
                 <input type="submit" value="Upload" />
             </form>
         {% else %}
