--- a/templates/hello.html
+++ b/templates/hello.html
@@ -26,7 +26,12 @@
 {% endif %}
 
 <ul>
-<li><a href='/upload'>Upload a photo</a> </li>
+<li><a href='/upload'>Uplondadnoad a photo</a> </li>
 <li><a href='/logout'>Logout</a></li>
 <li><a href='/'>Home</a></li>
+<li><a href='/add_friend'>Add Friend</a></li>
+<li><a href='/friends'>all friends</a></li>
+<li><a href='/find_friend'>Find Friend</a></li>
+
+
 </ul>
