--- a/templates/hello.html
+++ b/templates/hello.html
@@ -26,6 +26,7 @@
 {% endif %}
 
 <ul>
+<li><a href='/albumCreation'>Create an album</a> </li>
 <li><a href='/upload'>Upload a photo</a> </li>
 <li><a href='/browsePhotos'>Browse photos from users</a> </li>
 <li><a href='/logout'>Logout</a></li>
