--- a/templates/hello.html
+++ b/templates/hello.html
@@ -32,6 +32,7 @@
 <li><a href='/add_friend'>Add Friend</a></li>
 <li><a href='/friends'>all friends</a></li>
 <li><a href='/find_friend'>Find Friend</a></li>
+<li><a href='/browsePhotos'>Browse photos from users</a> </li>
 
 
 </ul>
