--- a/templates/mytagphotos.html
+++ b/templates/mytagphotos.html
@@ -1,13 +1,20 @@
-{% block content %}
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Photo Likes</title>
+</head>
+<body>
   <h2>Photos with tag "{{ tag }}"</h2>
-  <div class="row">
+
     {% for photo in photos %}
-      <div class="col-sm-4">
-        <img src="data:image/jpeg;base64,{{ base64.b64encode(photo[0]).decode('ascii') }}" class="img-fluid" alt="{{ photo[2] }}">
+      
+    <img src='data:image/jpg;base64, {{ base64.b64encode(photo[0]).decode("ascii") }}'/>
+
         <p>{{ photo[2] }}</p>
         <p>Tags: {{ photo[3] }}</p>
-      </div>
+     
       <p> Go to <a href='/profile'>profile?</a></p>
     {% endfor %}
-  </div>
-{% endblock %}
+</body>
+</html>
