--- a/templates/upload.html
+++ b/templates/upload.html
@@ -19,7 +19,8 @@
 
             <a href="/all_taggedphotos"><button>All tags</button></a>
             <a href="/top_taggedphotos"><button>Top tags</button></a>
-            
+            <a href="/youmayalsolike"><button>you may also like</button></a>
+
             {% if tags %}
          
                 <h3>Tags:</h3>
