all album and photo interactions are ready

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -26,9 +26,10 @@
 {% endif %}
 
 <ul>
-<li><a href='/albumCreation'>Create an album</a> </li>
+<li><a href='/albumSelection'>Interact with your albums!</a></li>
 <li><a href='/upload'>Upload a photo</a> </li>
 <li><a href='/browsePhotos'>Browse photos from users</a> </li>
+<li><a href='/photoDeletion'>Delete photos</a> </li>
 <li><a href='/logout'>Logout</a></li>
 <li><a href='/'>Home</a></li>
 </ul>
