--- a/templates/hello.html
+++ b/templates/hello.html
@@ -33,6 +33,7 @@
 <li><a href='/friends'>all friends</a></li>
 <li><a href='/find_friend'>Find Friend</a></li>
 <li><a href='/browsePhotos'>Browse photos from users</a> </li>
+<li><a href='/friend_recommendations'>find friend recommendations</a> </li>
 
 
 </ul>
