--- a/templates/friends.html
+++ b/templates/friends.html
@@ -4,6 +4,7 @@
 	<title>List of Friends</title>
 </head>
 <body>
+	<a href='/'>Home</a>
 	<h1>List of Friends</h1>
 	<!-- <form method="POST" action="{{ url_for('show_friends') }}">
 		<label for="userID">Enter your user ID:</label>
