--- a/templates/hello.html
+++ b/templates/hello.html
@@ -36,6 +36,6 @@
 <li><a href='/friends'>All friends</a></li>
 <li><a href='/find_friend'>Find Friends</a></li>
 <li><a href='/friend_recommendations'>find friend recommendations</a> </li>
-
+<li><a href='/topUsers'>Look at the top users on photoShare</a> </li>
 
 </ul>
