--- a/templates/matched_comments.html
+++ b/templates/matched_comments.html
@@ -4,6 +4,7 @@
 	<title>Matched Comments</title>
 </head>
 <body>
+	<a href='/'>Home</a>
 	<h1>Matched Comments:</h1>
 	<ul>
 		{% for comment in comments %}
