--- a/templates/mytagphotos.html
+++ b/templates/mytagphotos.html
@@ -5,6 +5,7 @@
 	<title>Photo Likes</title>
 </head>
 <body>
+  <a href='/'>Home</a>
   <h2>Photos with tag "{{ tag }}"</h2>
 
     {% for photo in photos %}
