--- a/templates/all_taggedphotos.html
+++ b/templates/all_taggedphotos.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Look at the photos!</title>
+        <a href='/'>Home</a>
     </head>
     <body>
         <div class="title">
