--- a/templates/find_friend.html
+++ b/templates/find_friend.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Find a Friend</h1>
+    <a href='/'>Home</a>
     <form method="POST" action="{{ url_for('find_friend') }}">
       <label for="email">Enter your friend's email address:</label><br>
       <input type="email" id="email" name="email"><br><br>
