--- a/templates/top_taggedphotos.html
+++ b/templates/top_taggedphotos.html
@@ -4,6 +4,7 @@
         <title>Look at the photos!</title>
     </head>
     <body>
+        <a href='/'>Home</a>
         <div class="title">
             <h1>Click a tag!</h1>
         </div>
