everything works i think

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -37,5 +37,5 @@
 <li><a href='/find_friend'>Find Friends</a></li>
 <li><a href='/friend_recommendations'>find friend recommendations</a> </li>
 <li><a href='/topUsers'>Look at the top users on photoShare</a> </li>
-
+<li><a href='/youMayAlsoLike'>some photos you may like!</a> </li>
 </ul>
